docs: protege credenciais do banco e atualiza instrucoes de build no readme

--- a/inventory-api/src/main/resources/application.properties
+++ b/inventory-api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=postgres
-quarkus.datasource.password=1527081091
+quarkus.datasource.username=${DB_USER:postgres}
+quarkus.datasource.password=${DB_PASSWORD:sua_senha_padrao}
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/bdautoflex
 
 quarkus.hibernate-orm.database.generation=update
