--- a/inventory-api/src/main/docker/Dockerfile.jvm
+++ b/inventory-api/src/main/docker/Dockerfile.jvm
@@ -80,21 +80,14 @@
 # You can find more information about the UBI base runtime images and their configuration here:
 # https://rh-openjdk.github.io/redhat-openjdk-containers/
 ###
-FROM registry.access.redhat.com/ubi9/openjdk-25-runtime:1.24
+FROM maven:3.9.6-eclipse-temurin-21 AS build
+COPY . /usr/src/app
+WORKDIR /usr/src/app
+RUN mvn package -DskipTests -Dnet.bytebuddy.experimental=true
 
-ENV LANGUAGE='en_US:en'
-
-
-# We make four distinct layers so if there are application changes the library layers can be re-used
-COPY --chown=185 target/quarkus-app/lib/ /deployments/lib/
-COPY --chown=185 target/quarkus-app/*.jar /deployments/
-COPY --chown=185 target/quarkus-app/app/ /deployments/app/
-COPY --chown=185 target/quarkus-app/quarkus/ /deployments/quarkus/
-
+FROM eclipse-temurin:21-jre
+RUN mkdir /deployments
+COPY --from=build /usr/src/app/target/quarkus-app/ /deployments/
 EXPOSE 8080
-USER 185
-ENV JAVA_OPTS_APPEND="-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager"
-ENV JAVA_APP_JAR="/deployments/quarkus-run.jar"
-
-ENTRYPOINT [ "/opt/jboss/container/java/run/run-java.sh" ]
+ENTRYPOINT ["java", "-Dnet.bytebuddy.experimental=true", "-jar", "/deployments/quarkus-run.jar"]
 
